added more content

--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -16,6 +16,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
   <!-- FONTAWESOME CDN
@@ -47,43 +48,78 @@
 
   <main>
     <div class="container">
-      <h2 style="text-align:center;">Sign up!</h2>
-      <form action="" name="registration">
+      <div class="form-background">
+        <h2 style="text-align:center;">Customer Satisfaction</h2>
+        <form action="" name="myForm">
 
-        <label for="firstname">First Name</label>
-        <input class="text-box" type="text" name="firstname" id="firstname" placeholder="John">
+          <label for="firstname">First Name</label>
+          <input class="text-box" type="text" name="firstname" id="firstname" placeholder="John">
 
-        <label for="lastname">Last Name</label>
-        <input class="text-box" type="text" name="lastname" id="lastname" placeholder="Doe">
+          <label for="lastname">Last Name</label>
+          <input class="text-box" type="text" name="lastname" id="lastname" placeholder="Doe">
 
-        <label for="email">Email</label>
-        <input class="text-box" type="email" name="email" id="email" placeholder="john@doe.com">
+          <p>Gender</p>
+          <div class="container-inner">
+            <input type="radio" name="radio" value="male">
+            <p class="gender">Male</p>
+            <input type="radio" name="radio" value="female">
+            <p class="gender">Female</p>
+            <input type="radio" name="radio" value="other">
+            <p class="gender">Other</p>
+          </div>
 
-        <label for="url">Website</label>
-        <input class="text-box" type="url" name="website" id="url" placeholder="www.johndoe.com">
-        
-        <label for="password">Password</label>
-        <input class="text-box" type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
-        
-        <label for="checkbox">Arbitrary Checkbox</label>
-        <input class="text-box" type="checkbox" name="checkbox" id="checkbox">
+          <label for="email">Email</label>
+          <input class="text-box" type="email" name="email" id="email" placeholder="john@doe.com">
 
-        <!-- <label for="check">Arbitrary Radio Buttons</label> -->
-        <input type="radio" name="radio">
-        <input type="radio" name="radio">
-        <input type="radio" name="radio">
+          <label for="password">Password</label>
+          <input class="text-box" type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
 
-        <label for="range">Arbitrary Range</label>
-        <input type="range" name="range" id="range">
+          <label for="url">Website</label>
+          <input class="text-box" type="url" name="website" id="url" placeholder="www.mywebsite.com">
 
-        <button id="submit" type="submit">Register</button>
-      </form>
+
+          <p>Yay checkboxes!</p>
+          <div class="container-inner">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+            <input type="checkbox" name="checkbox">
+          </div>
+
+
+          <label for="range">How satisfied are you?</label>
+          <div class="container-inner range">
+            <p class="range-value">0</p>
+            <p class="range-value">5</p>
+            <p class="range-value">10</p>
+          </div>
+          <div class="container-inner">
+            <input type="range" min="0" max="10" value="5" class="range" id="range">
+          </div>
+
+
+          <button type="submit" id="submit">Submit</button>
+
+        </form>
+      </div>
     </div>
   </main>
 
-  <!-- workbook nav-menu script   -->
+  <!-- scripts -->
   <script type="text/javascript" src="../../simple-scrollbar/simple-scrollbar.js"></script>
   <script type="text/javascript" src="../../js/nav-menu.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/jquery.validation/1.15.1/jquery.validate.min.js"></script>
+  <script type="text/javascript" src="js/script.js"></script>
+
 
   <!-- End Document
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
