--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -75,7 +75,7 @@
           <input class="text-box" type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
 
           <label for="url">Website</label>
-          <input class="text-box" type="url" name="website" id="url" placeholder="www.mywebsite.com">
+          <input class="text-box" type="url" name="website" id="url" placeholder="https://www.mywebsite.com">
 
 
           <p>Yay checkboxes!</p>
