added weapon for progression

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -16,7 +16,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
 
   <!-- FONTAWESOME CDN
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -41,6 +41,11 @@
   <main>
     <div class="container-main">
       <div class="container-inner">
+        <div id="counter" class="unselectable">0</div>
+        <div id="weapon" class="unselectable">
+          <img id="weapon-img" src="img/sword_01.png">
+          <p id="weapon-name">sword_01</p>
+        </div>
         <div id="hammer" class="unselectable swing"><img draggable="false" src="img/hammer.png" alt="a hammer"></div>
         <div id="anvil" class="unselectable">
           <img draggable="false" src="img/anvil.png" alt="an anvil">
@@ -48,7 +53,6 @@
           <div class="spark two"></div>
           <div class="spark three"></div>
         </div>
-        <div id="counter" class="unselectable">0</div>
       </div>
     </div>
   </main>
