added NASA and Phi Kappa Phi

--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -41,7 +41,7 @@
       <center>7TH GRADE MATH INTERVENTIONIST, MENDEZ MIDDLE SCHOOL, AUSTIN, TX — AUGUST 2014-PRESENT</center>
     </dt>
     <dd>
-      <center>Served as a Mathematics Interventionist to seventh grade students. Developed intervention plans to ensure students’ growth and success. Conducted one-on-one and group math activities to help better students’ understanding.</center>
+      <center>Developed intervention plans to ensure students’ growth and success. Conducted one-on-one and group math activities to help better students’ understanding.</center>
     </dd>
     <p></p>
     <dt>
@@ -55,10 +55,9 @@
   <h3>
     <center>EDUCATION</center>
   </h3>
-  
-  <center>Lamar University - Beaumont, TX — Bachelors in Science in Interdisciplinary Studies - 2011, Summa Cum Laude</center>
-  <center>Austin Community College - Austin, TX - Computer Science - Current Student</center>
   <center>Austin Coding Academy - Austin, TX - Web Development - Current Student</center>
+  <center>Austin Community College - Austin, TX - Computer Science - Current Student</center>
+  <center>Lamar University - Beaumont, TX — Bachelors in Science in Interdisciplinary Studies - 2011, Summa Cum Laude</center>
   <p></p>
   <h3>
     <center>TECHNICAL SKILLS</center>
@@ -67,8 +66,11 @@
   
   <center>Python, C++, Visual Studio, Html, CSS, GitHub</center>
   
-
-  
+  <h3>
+    <center>AWARDS and ACHIEVEMENTS</center>
+  </h3>
+   <center>My team placed first at the NCAS 2018 internship at NASA Langley</center>
+   <center>Member of Phi Kappa Phi</center>
 </body>
 
 </html>
