--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -11,7 +11,7 @@
 <body>
   <center>
     <div>
-    <img src="./img/circle-photo.jpg" alt="Profile Photo">
+      <img src="./img/circle-photo.jpg" alt="Profile Photo">
     </div>
   </center>
   <h1>
@@ -20,7 +20,7 @@
   <h2>
     <center>4707 WESTSLOPE CIRCLE, AUSTIN &diams; (512) 693-8986 &diams; lauracolten5@gmail.com</center>
     <center>
-    <a href="https://www.linkedin.com/in/lauracolten/">LinkedIn</a> &diams; <a href="https://github.com/LauraColten">GitHub</a>
+      <a href="https://www.linkedin.com/in/lauracolten/">LinkedIn</a> &diams; <a href="https://github.com/LauraColten">GitHub</a>
     </center>
   </h2>
   <h3>
@@ -31,24 +31,31 @@
       <center>1ST GRADE TEACHER, WELLS BRANCH LEADERSHIP ACADEMY, AUG 2015 – MAY 2017</center>
     </dt>
     <dd>
-      <center>Developed and implemented daily and unit lesson plans for 3rd grade, administered testing, tracked and analyzed class
-      performance. Conducted group and one-on-one math, reading and writing activities. Developed excellent rapport with
-      students Fostered a classroom environment conducive to learning and promoting excellent student engagement. Conducted
-      parent conferences.</center>
+      <center>Developed and implemented daily and unit lesson plans for 3rd grade, administered testing, tracked and
+        analyzed class
+        performance. Conducted group and one-on-one math, reading and writing activities. Developed excellent rapport
+        with
+        students Fostered a classroom environment conducive to learning and promoting excellent student engagement.
+        Conducted
+        parent conferences.</center>
     </dd>
     <p></p>
     <dt>
       <center>7TH GRADE MATH INTERVENTIONIST, MENDEZ MIDDLE SCHOOL, AUSTIN, TX — AUGUST 2014-PRESENT</center>
     </dt>
     <dd>
-      <center>Developed intervention plans to ensure students’ growth and success. Conducted one-on-one and group math activities to help better students’ understanding.</center>
+      <center>Developed intervention plans to ensure students’ growth and success. Conducted one-on-one and group math
+        activities to help better students’ understanding.</center>
     </dd>
     <p></p>
     <dt>
       <center>3RD GRADE TEACHER, COUPLAND SCHOOL, COUPLAND, TX — AUGUST 2013- JUNE 2014</center>
     </dt>
     <dd>
-      <center>Developed and implemented daily and unit lesson plans for 3rd grade, administered testing, tracked and analyzed class performance.Conducted group and one-on-one math, reading and writing activities.Developed excellent rapport with students. Fostered a classroom environment conducive to learning and promoting excellent student engagement.Conducted parent conferences.Coached and monitored UIL sponsored events.</center>
+      <center>Developed and implemented daily and unit lesson plans for 3rd grade, administered testing, tracked and
+        analyzed class performance.Conducted group and one-on-one math, reading and writing activities.Developed
+        excellent rapport with students. Fostered a classroom environment conducive to learning and promoting excellent
+        student engagement.Conducted parent conferences.Coached and monitored UIL sponsored events.</center>
     </dd>
   </dl>
 
@@ -63,14 +70,14 @@
     <center>TECHNICAL SKILLS</center>
   </h3>
 
-  
+
   <center>Python, C++, Visual Studio, Html, CSS, GitHub</center>
-  
+
   <h3>
     <center>AWARDS and ACHIEVEMENTS</center>
   </h3>
-   <center>My team placed first at the NCAS 2018 internship at NASA Langley</center>
-   <center>Member of Phi Kappa Phi</center>
+  <center>My team placed first at the NCAS 2018 internship at NASA Langley</center>
+  <center>Member of Phi Kappa Phi</center>
 </body>
 
 </html>
