added more ui elements

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -42,9 +42,11 @@
     <div class="container-main">
       <div class="container-inner">
         <div id="counter" class="unselectable">0</div>
+        <div id="next-weapon" class="unselectable"></div>
         <div id="weapon" class="unselectable">
           <img id="weapon-img" src="img/sword_01.png">
           <p id="weapon-name">sword_01</p>
+          <p class="announce" id="max-level">MAX LEVEL</p>
         </div>
         <div id="hammer" class="unselectable swing"><img draggable="false" src="img/hammer.png" alt="a hammer"></div>
         <div id="anvil" class="unselectable">
