--- a/checkpoint-one/index.html
+++ b/checkpoint-one/index.html
@@ -32,6 +32,7 @@
                 <input type="radio">I agree to Lyft's <a href="index.html">Terms of Service</a></div><br>
             <button type="button">APPLY TO DRIVE</button><a href="index.html">SIGN UP TO RIDE</a></u>
         </section>
+        <!-- working on adding a different radio button type.  -->
 
         <aside class="main-image">
             <img src="img/lyft-img.png">
@@ -92,17 +93,16 @@
             <div><img id="apps" src="img/appstore.png"><img id="apps" src="img/googleplay.png"></div>
             <br>
             <div><img id="apps" src="img/microsoft.png"><img id="apps"src="img/amazon.png"></div>
+            <div class="foot">
+                <a href="index.html">Terms</a>
+                <a href="index.html">Privacy</a>
+                <a href="index.html">&copy 2018 Lyft, Inc.</a>
+                <a href="twitter.com"><img src="img/twitter-icon.png"></a>
+                <a href="facebook.com"><img src="img/facebook-icon.png"></a>
+                <a href="instagram.com"><img src="img/instagram-icon.png"></a>
+            </div>
         </div>
+
     </section>
-
-
-    <div class="foot">
-            <a href="index.html">Terms</a>
-            <a href="index.html">Privacy</a>
-            <a href="index.html">&copy 2018 Lyft, Inc.</a>
-            <a href="twitter.com"><img src="img/twitter-icon.png"></a>
-            <a href="facebook.com"><img src="img/facebook-icon.png"></a>
-            <a href="instagram.com"><img src="img/instagram-icon.png"></a>
-        </div>
 </body>
 </html>
