--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -76,7 +76,12 @@
   <h3>
     <center>AWARDS and ACHIEVEMENTS</center>
   </h3>
-  <center>My team placed first at the NCAS 2018 internship at NASA Langley</center>
+  <br>
+  <center><img src="./img/meatball.jpg" alt="Meatball"></center>
+  <center>Member of the team that won 1st place at the NCAS 2018 internship at NASA Langley</center>
+  <br>
+  <br>
+  <center><img src="./img/pkp_circle.png" alt= "PKP"></center>
   <center>Member of Phi Kappa Phi</center>
 </body>
 
