--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -14,26 +14,24 @@
   <form id="formTest" method="get" action="processData">
     <table>
     <tr>
-      <td><label for="txtName">Name<span class="required">*</span></label></td>
-      <td><input type="text" id="txtName" name="name"></td>
-      <td id="elmNameError" class="errorMsg">&nbsp;</td></tr>
+      <td><label for="txtUrl">URL<span class="required">*</span></label></td>
+      <td><input type="text" id="txtUrl" name="email"></td>
+      <td id="elmUrlError" class="errorMsg">&nbsp;</td></tr>
+
     <tr>
-      <td><label for="txtAddress">Address</label></td>
-      <td><input type="text" id="txtAddress" name="address"></td>
-      <td id="elmAddressError" class="errorMsg">&nbsp;</td></tr>
+      <td><label for="txtPassword">Password (6-8 characters)<span class="required">*</span></label></td>
+      <td><input type="password" id="txtPassword" name="password"></td>
+      <td id="elmPasswordError" class="errorMsg">&nbsp;</td></tr>
     <tr>
-      <td><label for="txtZipcode">Zip Code<span class="required">*</span></label></td>
-      <td><input type="text" id="txtZipcode" name="zipcode"></td>
-      <td id="elmZipcodeError" class="errorMsg">&nbsp;</td></tr>
+      <td><label for="txtPWVerified">Verify Password<span class="required">*</span></label></td>
+      <td><input type="password" id="txtPWVerified" name="pwVerified"></td>
+      <td id="elmPWVerifiedError" class="errorMsg">&nbsp;</td></tr>
+
     <tr>
-      <td>Country<span class="required">*</span></td>
-      <td><select id="selCountry" name="country">
-            <option value="" selected>Please select...</option>
-            <option value="AA">AA</option>
-            <option value="BB">BB</option>
-            <option value="CC">CC</option>
-          </select></td>
-      <td id="elmCountryError" class="errorMsg">&nbsp;</td></tr>
+      <td><label for="txtEmail">Email<span class="required">*</span></label></td>
+      <td><input type="text" id="txtEmail" name="email"></td>
+      <td id="elmEmailError" class="errorMsg">&nbsp;</td></tr>
+    
     <tr>
       <td>Gender<span class="required">*</span></td>
       <td><label><input type="radio" name="gender" value="m">Male</label>
@@ -45,22 +43,17 @@
           <label><input type="checkbox" name="color" value="g">Green</label>
           <label><input type="checkbox" name="color" value="b">Blue</label></td>
       <td id="elmColorError" class="errorMsg">&nbsp;</td></tr>
+
     <tr>
-      <td><label for="txtPhone">Phone<span class="required">*</span></label></td>
-      <td><input type="text" id="txtPhone" name="phone"></td>
-      <td id="elmPhoneError" class="errorMsg">&nbsp;</td></tr>
-    <tr>
-      <td><label for="txtEmail">Email<span class="required">*</span></label></td>
-      <td><input type="text" id="txtEmail" name="email"></td>
-      <td id="elmEmailError" class="errorMsg">&nbsp;</td></tr>
-    <tr>
-      <td><label for="txtPassword">Password (6-8 characters)<span class="required">*</span></label></td>
-      <td><input type="password" id="txtPassword" name="password"></td>
-      <td id="elmPasswordError" class="errorMsg">&nbsp;</td></tr>
-    <tr>
-      <td><label for="txtPWVerified">Verify Password<span class="required">*</span></label></td>
-      <td><input type="password" id="txtPWVerified" name="pwVerified"></td>
-      <td id="elmPWVerifiedError" class="errorMsg">&nbsp;</td></tr>
+      <td>Country<span class="required">*</span></td>
+      <td><select id="selCountry" name="country">
+            <option value="" selected>Please select...</option>
+            <option value="AA">AA</option>
+            <option value="BB">BB</option>
+            <option value="CC">CC</option>
+          </select></td>
+      <td id="elmCountryError" class="errorMsg">&nbsp;</td></tr>
+    
     <tr>
       <td>&nbsp;</td>
       <td><input type="submit" value="Submit" id="btnSubmit">&nbsp;
