--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -42,7 +42,7 @@
     <div class="container-main">
       <div class="container-inner">
         <div id="counter" class="unselectable">0</div>
-        <div id="next-weapon" class="unselectable"></div>
+        <p id="next-weapon-level"></p>
         <div id="weapon" class="unselectable">
           <img id="weapon-img" src="img/sword_01.png">
           <p id="weapon-name">sword_01</p>
