--- a/01week/resume/index.html
+++ b/01week/resume/index.html
@@ -2,12 +2,11 @@
     <html>
     <head>
         <title>Andrew's Resume</title>
-          <link rel="stylesheet" href="./style.css"/>
+        <link rel="stylesheet" href="./style.css"/>
     </head>
     <body>
         <header>
-            
-            <h1 id="main_title">My Resume</h1>
+             <h1 id="main_title">My Resume</h1>
         </header>
         <nav>
             <ul>
@@ -27,7 +26,7 @@
                  <p october> Started October 2018</p>
             </article>
         </section>
-        <section = employment>
+        <section>
             <article>
                 <h1 class="section_title">Employment</h1>
                 <h3 class="employment_title">Executive Assistsant</h3>
@@ -39,27 +38,24 @@
                     <li>Organize recoerds and provide expense reports</li>
                     <li>Handle confidential information</li>
                 </ul>
-                        </p>
                 <h3 class="employment_title">Account Manager</h3>
-                        <p>Manage the shipping and receiving of businesses nationwide.  Call prospects and cycle through the sales cycle to qualify, assess and close customers. Work to uncover prospects and customers’ needs to develop solutions to ensure needs were met.  Schedule trucks to pick up and deliver product within specified time frame. Act as person liaison between customers and carriers.
-                            <ul>
-                                <li> Customers one point of contact within Total Quality Logistics</li>
-                                <li>Make between 80-100 calls to qualigy assess, develop solutions and close customers</li>
-                                <li> On call 24/7 to handle any issue that arises</li>
-                                <li>Consistnetly met and surpassed company wide effort goals and revenue goals</li>
-                            </ul>
-                        </p>
-                    <h3 class="employment_title">Kitchen Manager</h3>
-                        <p>Manage kitchen operations for two fast-paced, dine-in/carry-out gourmet pizza restaurants, each seating 50+ guests and together generating $1 million in annual sales volume. Monitor inventory levels; order food and supplies. Schedule and supervise 8 team members engaged in food preparation, dishwashing and shift organization activities. Assure appropriate staffing and adherence to sanitation, safety, portion control, loss prevention and productivity standards. Expedite food production to enhance customer service and satisfaction. As indicated, arrange equipment preventive maintenance and repair.
-                            <ul>
-                                <li> Train new hires in food preparation, sanitation, safety standards and procedures</li>
-                                <li>Routinely achieve 15-minute service goal with largely teenage, part-time work crew.</li>
-                                <li>Accommodated significant sales increases without adding headcount.</li>
-                                <li>Commended by General Manager for personal productivity and work ethic. </li>
-                            </ul>
-                        </p>             
-                    <h3 class="employment_title">Server/Production Worker</h3>
-                        <p>Held rotatin front-of-the-house and back-of-the-house roles. Assembled orders, engaged in conversations to create a friendly atmosphere and promoted beverages to build sales.  Consistenlty met or surpassed production and sales goals.</p>
+                <p>Manage the shipping and receiving of businesses nationwide.  Call prospects and cycle through the sales cycle to qualify, assess and close customers. Work to uncover prospects and customers’ needs to develop solutions to ensure needs were met.  Schedule trucks to pick up and deliver product within specified time frame. Act as person liaison between customers and carriers. </p>
+                <ul>
+                    <li> Customers one point of contact within Total Quality Logistics</li>
+                    <li>Make between 80-100 calls to qualigy assess, develop solutions and close customers</li>
+                    <li> On call 24/7 to handle any issue that arises</li>
+                    <li>Consistnetly met and surpassed company wide effort goals and revenue goals</li>
+                </ul>
+                <h3 class="employment_title">Kitchen Manager</h3>
+                <p>Manage kitchen operations for two fast-paced, dine-in/carry-out gourmet pizza restaurants, each seating 50+ guests and together generating $1 million in annual sales volume. Monitor inventory levels; order food and supplies. Schedule and supervise 8 team members engaged in food preparation, dishwashing and shift organization activities. Assure appropriate staffing and adherence to sanitation, safety, portion control, loss prevention and productivity standards. Expedite food production to enhance customer service and satisfaction. As indicated, arrange equipment preventive maintenance and repair. </p>
+                <ul>
+                    <li> Train new hires in food preparation, sanitation, safety standards and procedures</li>
+                    <li>Routinely achieve 15-minute service goal with largely teenage, part-time work crew.</li>
+                    <li>Accommodated significant sales increases without adding headcount.</li>
+                    <li>Commended by General Manager for personal productivity and work ethic. </li>
+                    </ul>            
+                <h3 class="employment_title">Server/Production Worker</h3>
+                <p>Held rotatin front-of-the-house and back-of-the-house roles. Assembled orders, engaged in conversations to create a friendly atmosphere and promoted beverages to build sales.  Consistenlty met or surpassed production and sales goals.</p>
             </article>
         </section>
         <footer>
