--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -11,17 +11,37 @@
 </head>
 <body>
   <div id=header>
-      <div class=cookies>0 Cookies!</div>
-      <span id=multiplier>1</span>
+      <div class=cookies>Cookie Clicker Game!</div>
     </div>
-  <div id=content>
-      <img src="./img/cookie.png" alt="Cookie picture" id=cookie ontouchstart="zoom(1)" ontouchend="zoom(0)">
+  <div class="showHowToPlay">
+    <a href="#" id="rightPanel" class="trigger right">How To Play</a>
+    <div class="howToPlay panel right">
+      <h2>Cookie Clicker</h2>
+      <p>Click on cookie to accumulate points to Uprade.
+      <br>
+      </div>
+  
+  <div class="cookies1">
+    <span id=multiplier>1</span>
+    <div id=content>
+    <img src="./img/cookie.png" alt="Cookie picture" id=cookie ontouchstart="zoom(1)" ontouchend="zoom(0)">
+    <a href="#" onclick="add()"><img src="./img/cookie.png"></a>
+    <br>
     </div>
+  </div>
+  
   <div id=footer>
-      <button onclick="upgrade()">Upgrade<br>(25)</button>
-    </div>
+    <h2>You got: <input type="text" id="text" disabled style="text-align:center"> Cookies!</h2>
+    <button onclick="upgrade()">Upgrade<br>(25)</button>
+   </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script type="text/javascript" src="./js/jquery.js"></script> 
+  <script type="text/javascript" src="./js/jquery-ui-1.9.0.custom.js"></script>   
+  <script type="text/javascript" src="./js/jquery.slidePanel.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
 <script src="./js/script.js"></script>
 </body>
 </html>
