finished the items shell

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -76,7 +76,148 @@
             <div class="fullInventoryTitle">
                 <div>ITEMS</div>
             </div>
-            <div class="itemsGrid"></div>
+            <div class="itemsGrid">
+                <div class="itemGrid1 inventoryItem">
+                    <div class = "innerInventoryItem bamboo">
+                        <div id="itemBamboo">0</div>
+                    </div>
+                </div>
+                <div class="itemGrid2 inventoryItem">
+                    <div class = "innerInventoryItem jute">
+                        <div id="itemInventoryJute">0</div>
+                    </div>
+                </div>
+                <div class="itemGrid3 inventoryItem">
+                    <div class = "innerInventoryItem palmLeaf">
+                        <div id="itemInventoryPalmLeaf">0</div>
+                    </div>
+                </div>
+                <div class="itemGrid4 inventoryItem">
+                    <div class = "innerInventoryItem wood">
+                        <div id="itemInventoryWood">0</div>
+                    </div>
+                </div>
+                <div class="itemGrid5 inventoryItem">
+                    <div class = "innerInventoryItem lianaVine">
+                        <div id="itemInventoryLiana"></div>
+                    </div>
+                </div>
+                <div class="itemGrid6 inventoryItem">
+                    <div class = "innerInventoryItem resin">
+                        <div id="itemInventoryResin"></div>
+                    </div>
+                </div>
+                <div class="itemGrid7 inventoryItem">
+                    <div class = "innerInventoryItem stone">
+                        <div id="itemInventoryStone"></div>
+                    </div>
+                </div>
+                <div class="itemGrid8 inventoryItem">
+                    <div class = "innerInventoryItem iron">
+                        <div id="itemInventoryIron"></div>
+                    </div>
+                </div>
+                <div class="itemGrid9 inventoryItem">
+                    <div class = "innerInventoryItem fireWood">
+                        <div id="itemInventoryFireWood"></div>
+                    </div>
+                </div>
+                <div class="itemGrid10 inventoryItem">
+                    <div class = "innerInventoryItem stoneBlock">
+                        <div id="itemInventoryStoneBlock"></div>
+                    </div>
+                </div>
+                <div class="itemGrid11 inventoryItem">
+                    <div class = "innerInventoryItem driedJute">
+                        <div id="itemInventoryDriedJute"></div>
+                    </div>
+                </div>
+                <div class="itemGrid12 inventoryItem">
+                    <div class = "innerInventoryItem torch">
+                        <div id="itemInventorytorch"></div>
+                    </div>
+                </div>
+                <div class="itemGrid13 inventoryItem">
+                    <div class = "innerInventoryItem jackPlane">
+                        <div id="itemInventoryJackPlane"></div>
+                    </div>
+                </div>
+                <div class="itemGrid14 inventoryItem">
+                    <div class = "innerInventoryItem bucket">
+                        <div id="itemInventoryBucket"></div>
+                    </div>
+                </div>
+                <div class="itemGrid15 inventoryItem">
+                    <div class = "innerInventoryItem plank">
+                        <div id="itemInventoryPlank"></div>
+                    </div>
+                </div>
+                <div class="itemGrid16 inventoryItem">
+                    <div class = "innerInventoryItem rope">
+                        <div id="itemInventoryRope"></div>
+                    </div>
+                </div>
+                <div class="itemGrid17 inventoryItem">
+                    <div class = "innerInventoryItem ropeLadder">
+                        <div id="itemInventoryRopeLadder"></div>
+                    </div>
+                </div>
+                <div class="itemGrid18 inventoryItem">
+                    <div class = "innerInventoryItem mat">
+                        <div id="itemInventoryMat"></div>
+                    </div>
+                </div>
+                <div class="itemGrid19 inventoryItem">
+                    <div class = "innerInventoryItem wickerBasket">
+                        <div id="itemInventoryWickerBasket"></div>
+                    </div>
+                </div>
+                <div class="itemGrid20 inventoryItem">
+                    <div class = "innerInventoryItem woodenLattice">
+                        <div id="itemInventoryWoodenLattice"></div>
+                    </div>
+                </div>
+                <div class="itemGrid21 inventoryItem">
+                    <div class = "innerInventoryItem ceramicLantern">
+                        <div id="itemInventoryCeramicLantern"></div>
+                    </div>
+                </div>
+                <div class="itemGrid22 inventoryItem">
+                    <div class = "innerInventoryItem ceramicPot">
+                        <div id="itemInventoryCeramicPot"></div>
+                    </div>
+                </div>
+                <div class="itemGrid23 inventoryItem">
+                    <div class = "innerInventoryItem cog">
+                        <div id="itemInventoryCog"></div>
+                    </div>
+                </div>
+                <div class="itemGrid24 inventoryItem">
+                    <div class = "innerInventoryItem lampOil">
+                        <div id="itemInventoryLampOil"></div>
+                    </div>
+                </div>
+                <div class="itemGrid25 inventoryItem">
+                    <div class = "innerInventoryItem glassBottle">
+                        <div id="itemInventoryGlassBottle"></div>
+                    </div>
+                </div>
+                <div class="itemGrid26 inventoryItem">
+                    <div class = "innerInventoryItem lense">
+                        <div id="itemInventoryLense"></div>
+                    </div>
+                </div>
+                <div class="itemGrid27 inventoryItem">
+                    <div class = "innerInventoryItem string">
+                        <div id="itemInventorystring"></div>
+                    </div>
+                </div>
+                <div class="itemGrid28 inventoryItem">
+                    <div class = "innerInventoryItem cloth">
+                        <div id="itemInventorycloth"></div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="fullInventorySpecial">
             <div class="fullInventoryTitle">
