Tweaked Portfolio, added target blank to links to open in new tab

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -23,10 +23,10 @@
     <p>Kyle Pajari</p>
     <nav>
       <ul>
-        <li><a href="../01week/resume/index.html">Resume</a></li>
-        <li><a href="../02week/bio/index.html">Bio</a></li>
-        <li><a href="../02week/blog/index.html">Blog</a></li>
-        <li><a href="https://github.com/kylepajari/web-workbook">GitHub</a></li>
+        <li><a href="../01week/resume/index.html" target="_blank">Resume</a></li>
+        <li><a href="../02week/bio/index.html" target="_blank">Bio</a></li>
+        <li><a href="https://www.linkedin.com/in/kyle-pajari-43806016b/" target="_blank">LinkedIn</a></li>
+        <li><a href="https://github.com/kylepajari/web-workbook" target="_blank">GitHub</a></li>
         <li><a href="projects.html">My Projects</a></li>
       </ul>
     </nav>
