--- a/portfolio/projects.html
+++ b/portfolio/projects.html
@@ -26,23 +26,24 @@
     </nav>
   </header>
   <main>
-    <strong class="white32">Project Links</strong>
-    <nav>
+    <nav id="projectsnav">
+      <strong class="white32">Project Links</strong>
       <ul>
-        <li><a href="../03week/airplane/index.html">Airplane</a></li>
-        <li><a href="../04week/nasa/index.html">Nasa</a></li>
-        <li><a href="../04week/tomorrows-technology/index.html">Tomorrows Technology</a></li>
-        <li><a href="../04week/welcome-to-our-site/index.html">Welcome To Our Site</a></li>
-        <li><a href="../05week/transitions-and-transformations/index.html">Transtions and Translations</a></li>
-        <li><a href="../05week/travel-gram/index.html">Travel Gram</a></li>
-        <li><a href="../06week/dice/index.html">Dice</a></li>
-        <li><a href="../07week/calculator/index.html">Calculator</a></li>
-        <li><a href="../07week/dom-practice/index.html">DOM Practice</a></li>
-        <li><a href="../08week/dom-events/index.html">DOM Events</a></li>
-        <li><a href="../08week/tic-tac-toe/index.html">Tic-Tac-Toe</a></li>
-        <li><a href="../09week/customer-satisfaction/index.html">Survey Form</a></li>
-        <li><a href="../09week/towers-of-hanoi/index.html">Towers of Hanoi</a></li>
-        <li><a href="../checkpoint-3/index.html">Cookie Clicker</a></li>
+        <li><a href="../02week/blog/index.html" target="_blank">Blog</a></li>
+        <li><a href="../03week/airplane/index.html" target="_blank">Airplane</a></li>
+        <li><a href="../04week/nasa/index.html" target="_blank">Nasa</a></li>
+        <li><a href="../04week/tomorrows-technology/index.html" target="_blank">Tomorrows Technology</a></li>
+        <li><a href="../04week/welcome-to-our-site/index.html" target="_blank">Welcome To Our Site</a></li>
+        <li><a href="../05week/transitions-and-transformations/index.html" target="_blank">Transtions and Translations</a></li>
+        <li><a href="../05week/travel-gram/index.html" target="_blank">Travel Gram</a></li>
+        <li><a href="../06week/dice/index.html" target="_blank">Dice</a></li>
+        <li><a href="../07week/calculator/index.html" target="_blank">Calculator</a></li>
+        <li><a href="../07week/dom-practice/index.html" target="_blank">DOM Practice</a></li>
+        <li><a href="../08week/dom-events/index.html" target="_blank">DOM Events</a></li>
+        <li><a href="../08week/tic-tac-toe/index.html" target="_blank">Tic-Tac-Toe</a></li>
+        <li><a href="../09week/customer-satisfaction/index.html" target="_blank">Survey Form</a></li>
+        <li><a href="../09week/towers-of-hanoi/index.html" target="_blank">Towers of Hanoi</a></li>
+        <li><a href="../checkpoint-3/index.html" target="_blank">Cookie Clicker</a></li>
       </ul>
     </nav>
   </main>
