finished the items shell

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -223,6 +223,21 @@
             <div class="fullInventoryTitle">
                 <div>SPECIAL</div>
             </div>
+            <div class = "innerInventoryItem cutlass">
+                <div id="specialInventorycutlass"></div>
+            </div>
+            <div class = "innerInventoryItem axe">
+                <div id="specialInventoryAxe"></div>
+            </div>
+            <div class = "innerInventoryItem pickAxe">
+                <div id="specialInventoryPickAxe"></div>
+            </div>
+            <div class = "innerInventoryItem fishHook">
+                <div id="specialInventoryFishHook"></div>
+            </div>
+            <div class = "innerInventoryItem waterPump">
+                <div id="specialInventoryWaterPump"></div>
+            </div>
         </div>
         <div class="fullInventoryBoat">
             <div class="fullInventoryTitle">
