--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -243,6 +243,30 @@
             <div class="fullInventoryTitle">
                 <div>BOAT</div>
             </div>
+            <div class = "innerInventoryItem rudder">
+                <div id="boatInventoryrudder"></div>
+            </div>
+            <div class = "innerInventoryItem sails">
+                <div id="boatInventorySails"></div>
+            </div>
+            <div class = "innerInventoryItem mast">
+                <div id="boatInventoryMast"></div>
+            </div>
+            <div class = "innerInventoryItem haul">
+                <div id="boatInventoryHaul"></div>
+            </div>
+            <div class = "innerInventoryItem foodStore">
+                <div id="specialInventoryFoodStore"></div>
+            </div>
+            <div class = "innerInventoryItem waterStore">
+                <div id="specialInventoryWaterStore"></div>
+            </div>
+            <div class = "innerInventoryItem spyGlass">
+                <div id="specialInventorySpyGlass"></div>
+            </div>
+            <div class = "innerInventoryItem starDisk">
+                <div id="specialInventoryStarDisk"></div>
+            </div>
         </div>
     </div>
 <script src="./javascript/main.js"></script>
