finished the advanced inventory shell

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -255,17 +255,19 @@
             <div class = "innerInventoryItem haul">
                 <div id="boatInventoryHaul"></div>
             </div>
-            <div class = "innerInventoryItem foodStore">
-                <div id="specialInventoryFoodStore"></div>
-            </div>
-            <div class = "innerInventoryItem waterStore">
-                <div id="specialInventoryWaterStore"></div>
-            </div>
-            <div class = "innerInventoryItem spyGlass">
-                <div id="specialInventorySpyGlass"></div>
-            </div>
-            <div class = "innerInventoryItem starDisk">
-                <div id="specialInventoryStarDisk"></div>
+            <div class="storage">
+                <div class = "innerInventoryItem foodStore">
+                    <div id="specialInventoryFoodStore"></div>
+                </div>
+                <div class = "innerInventoryItem waterStore">
+                    <div id="specialInventoryWaterStore"></div>
+                </div>
+                <div class = "innerInventoryItem spyGlass">
+                    <div id="specialInventorySpyGlass"></div>
+                </div>
+                <div class = "innerInventoryItem starDisk">
+                    <div id="specialInventoryStarDisk"></div>
+                </div>
             </div>
         </div>
     </div>
