began the markup for upgrade section

--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -55,6 +55,37 @@
           <div class="spark two"></div>
           <div class="spark three"></div>
         </div>
+        <p>Upgrades</p>
+        <div id="upgrades">
+          <div class="upgrade one" id="upgrade-apprentice">
+            <p class="upgrade-number">1</p>
+            <p class="upgrade-name">Apprentice</p>
+            <p class="upgrade-cost"></p>
+          </div>
+          <div class="upgrade two" id="upgrade-hammer">
+            <p class="upgrade-number">2</p>
+            <p class="upgrade-name">Hammer Efficiency</p>
+            <p class="upgrade-cost"></p>
+          </div>
+          <div class="upgrade three">
+            <p class="upgrade-number">3</p>
+          </div>
+          <div class="upgrade four">
+            <p class="upgrade-number">4</p>
+          </div>
+          <div class="upgrade five">
+            <p class="upgrade-number">5</p>
+          </div>
+          <div class="upgrade six">
+            <p class="upgrade-number">6</p>
+          </div>
+          <div class="upgrade seven">
+            <p class="upgrade-number">7</p>
+          </div>
+          <div class="upgrade eight">
+            <p class="upgrade-number">8</p>
+          </div>
+        </div>
       </div>
     </div>
   </main>
