--- a/checkpoint3/index.html
+++ b/checkpoint3/index.html
@@ -9,6 +9,14 @@
   <script src="main.js"></script>
 </head>
 <body>
-  
+  <div class="container">
+    <div class="box">
+      <div class="clickable">
+
+      </div>
+    </div>
+    <div class="box2"></div>
+    <div class="box"></div>
+  </div>
 </body>
 </html>
