finished the advanced inventory shell

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -243,30 +243,36 @@
             <div class="fullInventoryTitle">
                 <div>BOAT</div>
             </div>
-            <div class = "innerInventoryItem rudder">
-                <div id="boatInventoryrudder"></div>
-            </div>
-            <div class = "innerInventoryItem sails">
-                <div id="boatInventorySails"></div>
-            </div>
-            <div class = "innerInventoryItem mast">
-                <div id="boatInventoryMast"></div>
-            </div>
-            <div class = "innerInventoryItem haul">
-                <div id="boatInventoryHaul"></div>
-            </div>
-            <div class="storage">
-                <div class = "innerInventoryItem foodStore">
-                    <div id="specialInventoryFoodStore"></div>
+            <div class="boatInvContainer">
+                <div class="fullBoatInv">
+                    <div class = "innerInventoryItem rudder">
+                        <div id="boatInventoryrudder"></div>
+                    </div>
+                    <div class = "innerInventoryItem sails">
+                        <div id="boatInventorySails"></div>
+                    </div>
+                    <div class = "innerInventoryItem mast">
+                        <div id="boatInventoryMast"></div>
+                    </div>
+                    <div class = "innerInventoryItem haul">
+                        <div id="boatInventoryHaul"></div>
+                    </div>
                 </div>
-                <div class = "innerInventoryItem waterStore">
-                    <div id="specialInventoryWaterStore"></div>
-                </div>
-                <div class = "innerInventoryItem spyGlass">
-                    <div id="specialInventorySpyGlass"></div>
-                </div>
-                <div class = "innerInventoryItem starDisk">
-                    <div id="specialInventoryStarDisk"></div>
+                <div class="storage">
+                    <div class = "innerInventoryItem foodStore">
+                        Stored Food
+                        <div id="specialInventoryFoodStore"></div>
+                    </div>
+                    <div class = "innerInventoryItem waterStore">
+                        Stored Water
+                        <div id="specialInventoryWaterStore"></div>
+                    </div>
+                    <div class = "innerInventoryItem spyGlass">
+                        <div id="specialInventorySpyGlass"></div>
+                    </div>
+                    <div class = "innerInventoryItem starDisk">
+                        <div id="specialInventoryStarDisk"></div>
+                    </div>
                 </div>
             </div>
         </div>
