--- a/09week/towers-of-hanoi/index.html
+++ b/09week/towers-of-hanoi/index.html
@@ -3,20 +3,29 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Towers of Hanoi</title>
+  <link href="https://fonts.googleapis.com/css?family=Bangers" rel="stylesheet"> 
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div data-stack="1">
-    <div data-block="100"></div>
-    <div data-block="75"></div>
-    <div data-block="50"></div>
-    <div data-block="25"></div>
+  <header></header>
+ TOWER OF THE DRAGON GOD
+<div id="canves">
+    <div class="restart"><i class="fa fa-repeat"></i></div>
+    <div class="curtain"></div>
+    <ul id="score-panel">
+      <li><i class="fa fa-star"></i></li>
+      <li><i class="fa fa-star"></i></li>
+      <li><i class="fa fa-star"></i></li>
+      <li>
+        <h1> <span id="moves-num"></span><span> Moves</span></h1>
+      </li>
+    </ul>
+    <ul class="tower" id="tower-1"></ul>
+    <ul class="tower" id="tower-2"></ul>
+    <ul class="tower" id="tower-3"></ul>
   </div>
-  <div data-stack="2">
-  </div>
-  <div data-stack="3">
-  </div>
-  <div id="announce-game-won"></div>
+  <footer></footer>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 </body>
