--- a/09week/customer-satisfaction/index.html
+++ b/09week/customer-satisfaction/index.html
@@ -2,7 +2,6 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=K2D" rel="stylesheet"> 
-  <link href="https://fonts.googleapis.com/css?family=Rajdhani|Rubik" rel="stylesheet">
   <title>Christopher Bergamo Resume</title>
   <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -11,39 +10,46 @@
 <body>
         <div class="container">
                 <h2 style="text-align:center;">Sign up!</h2>
-                <div id="register">
-                <form action="" name="registration">
-              <div id="line1">
-                  <label for="url">Enter URL</label>
-                  <input type="text" name="url" id="url" placeholder="http://www.mysite.com">
-                  <div id="linea">
+              <div id="register">
+                  <form action="" name="registration">
+                    <div id="innercontainer">
+                    <div id="leftside">
+
+                    <label for="url">Enter URL</label>
+                      <input type="text" name="url" id="url" placeholder="http://www.mysite.com">
+
                   <label for="lastname">Last Name</label>
                   <input type="text" name="lastname" id="lastname" placeholder="Doe">
-                </div>
-              <div id="line2">
+
+
                   <label for="email">Email</label>
                   <input type="email" name="email" id="email" placeholder="john@doe.com">
-                  <div id="lineb">
+
+                    </div>
+                    <div id="rightside">
+
                   <label for="password">Password</label>
                   <input type="password" name="password" id="password" placeholder="&#9679;&#9679;&#9679;&#9679;&#9679;">
-                </div>
-                <div id="line3">
+
+
                   <form action="/action_page.php" method="get">
                   <input type="checkbox" name="subscribe" value="subscribe">subscribe
-                </div>
-                <div id="line4">
+
+
                  <input type="radio" name="gender" value="male" unchecked> human
-                </div>
-                <div id="line9"
+
+
                <legend>Audio settings</legend>
               <label for="volume">Volume</label>
               <input type="range" id="start" name="volume"
                                          min="0" max="11" />
-              </div>
-              <div id="linec"></div>
+                      </div>
+                    
                   <button type="submit">Register</button>
                 </form>
+              </div>
             </div>
+          </div>
               
             <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
             <script type="https://cdn.jsdelivr.net/jquery/1.12.4/jquery.min.js"></script>
