finished the advanced inventory shell and js to open and close it

--- a/checkpoint-three/index.html
+++ b/checkpoint-three/index.html
@@ -74,6 +74,7 @@
     <div id="fullInventory">
         <div class="fullInventoryItems">
             <div class="fullInventoryTitle">
+                <div class="exitInventoryContainer"><div id="exitInventory">X</div></div>
                 <div>ITEMS</div>
             </div>
             <div class="itemsGrid">
